# realtime_chat

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile
backend/app/: mypy.ini  prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2043967c20b0_initialization.py  7ad1dbec18ae_add_autoincrement_indices.py  87a24d9099b9_refactor_tables_to_conversations.py  ae69526f7543_add_indexes_and_user_conversation_.py
backend/app/app/: authentication.py  backend_pre_start.py  config.py  connections.py  datastore.py  dependencies.py  main.py  schemas.py
backend/app/app/api/v1/: __init__.py  conversations.py  login.py  logout.py  users.py  ws.py
backend/app/app/db/: base_class.py  models.py  session.py
backend/app/app/utils/: models_utils.py
backend/app/scripts/: format.sh  lint.sh  test.sh
frontend/: .env  Dockerfile  api.tsx  env.tsx  package-lock.json  package.json  tailwind.config.ts  types.tsx
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/login/: LoginForm.tsx  page.tsx
frontend/app/messages/: ConversationList.tsx  UserListSlideOver.tsx  layout.tsx  page.tsx
frontend/app/messages/[id]/: MessageList.tsx  Subject.tsx  TextBox.tsx  page.tsx
frontend/app/register/: RegistrationForm.tsx  page.tsx
frontend/components/: ErrorLine.tsx  Header.tsx  Spinner.tsx
frontend/context/: auth.tsx  conversation.tsx
frontend/hooks/: useDebounce.tsx
